# linlisHomePage

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_OPTIMIZATION.md  DEPLOY_GUIDE.md  Dockerfile  HISTORY.md  PROJECT_DOCUMENTATION.md  README.md  ROADMAP.md  TASK_STATUS.md  TEST_STRATEGY.md  docker-compose.yml  migrate_design.py  package-lock.json  package.json  project.properties  server.js  start.bat  start.sh  stop.bat  前端修复和部署总结.md  项目架构.md  项目问题分析报告.md
api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 3e906ba69b98_initial_schema.py
api/app/: main.py  seed.py
api/app/core/: config.py  database.py  deps.py  security.py
api/app/models/: __init__.py
api/app/plugins/: __init__.py
api/app/plugins/quant/: __init__.py  router.py
api/app/routers/: ai.py  articles.py  auth.py  categories.py  gold_price.py  health.py  tags.py  tools.py  tweets.py
api/app/schemas/: ai.py  article.py  auth.py  common.py  gold_price.py  tools.py  tweets.py
api/app/services/: ai.py  articles.py  auth.py  gold_price.py  gold_scheduler.py  llm.py  tools.py  tweets.py
api/scripts/: _smoke_miai.py
api/tests/: conftest.py  test_ai.py  test_announce_parse.py  test_articles.py  test_auth.py  test_categories_tags.py  test_dialogue_no_llm_for_fixed.py  test_gold_price.py  test_health.py  test_llm_provider.py  test_quant_plugin.py  test_tools.py  test_tweets.py  test_xiaomi_binding.py  test_xiaomi_dialogue_flow.py  test_xiaomi_dialogue_keywords.py  test_xiaomi_dialogue_mode.py  test_xiaomi_plugin.py  test_xiaomi_volume.py
(+425 files in other folders)
